use lazy updates for memory analyzer plugin
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1238 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/memory_analyzer.ui
+++ b/share/ui/memory_analyzer.ui
@@ -22,7 +22,7 @@
       <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
+        <property name="spacing">4</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
@@ -95,6 +95,20 @@
           </object>
           <packing>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="MemoryAnalyzerLoadingLabel">
+            <property name="visible">True</property>
+            <property name="label" translatable="yes">Updating memory usage data ...</property>
+            <attributes>
+              <attribute name="style" value="italic"/>
+            </attributes>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
