--- a/share/ui/memory_analyzer.ui
+++ b/share/ui/memory_analyzer.ui
@@ -116,6 +116,20 @@
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
+              <object class="GtkButton" id="MemoryAnalyzerCopyButton">
+                <property name="label">gtk-copy</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkButton" id="MemoryAnalyzerRefreshButton">
                 <property name="label">gtk-refresh</property>
                 <property name="visible">True</property>
@@ -126,7 +140,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -140,7 +154,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
@@ -153,6 +167,7 @@
       </object>
     </child>
     <action-widgets>
+      <action-widget response="0">MemoryAnalyzerCopyButton</action-widget>
       <action-widget response="0">MemoryAnalyzerRefreshButton</action-widget>
       <action-widget response="0">MemoryAnalyzerCloseButton</action-widget>
     </action-widgets>
