fixed GTK errors that prevent some controls (e.g tool radius) from being displayed * these errors seem to be ignored by most GTK versionsOB --This line, and those below, will be ignored
M    src/pycam/Plugins/Processes.py
M    src/pycam/Plugins/Tasks.py
M    src/pycam/Plugins/Tools.py
M    share/ui/tools.ui


git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1248 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/tools.ui
+++ b/share/ui/tools.ui
@@ -29,7 +29,7 @@
   <object class="GtkListStore" id="ToolList">
     <columns>
       <!-- column-name object_ref -->
-      <column type="guint"/>
+      <column type="gulong"/>
     </columns>
   </object>
   <object class="GtkVPaned" id="ToolBox">
