--- a/share/ui/model_scaling.ui
+++ b/share/ui/model_scaling.ui
@@ -159,7 +159,7 @@
                             <property name="invisible_char">&#x25CF;</property>
                             <property name="activates_default">True</property>
                             <property name="adjustment">ScaleDimensionValue</property>
-                            <property name="digits">2</property>
+                            <property name="digits">3</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -314,6 +314,7 @@
     </data>
   </object>
   <object class="GtkAdjustment" id="ScaleDimensionValue">
+    <property name="lower">0.001</property>
     <property name="upper">10000</property>
     <property name="step_increment">1</property>
   </object>
