--- a/share/ui/model_extrusion.ui
+++ b/share/ui/model_extrusion.ui
@@ -200,6 +200,7 @@
     <property name="step_increment">0.10000000000000001</property>
   </object>
   <object class="GtkAdjustment" id="ExtrusionWidthValue">
+    <property name="lower">0.001</property>
     <property name="upper">1000</property>
     <property name="step_increment">0.5</property>
   </object>
