--- a/share/ui/processes.ui
+++ b/share/ui/processes.ui
@@ -18,8 +18,8 @@
   </object>
   <object class="GtkListStore" id="ProcessList">
     <columns>
-      <!-- column-name ref -->
-      <column type="gulong"/>
+      <!-- column-name uuid -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkVPaned" id="ProcessBox">
@@ -49,7 +49,9 @@
                   <object class="GtkTreeViewColumn" id="NameColumn">
                     <property name="title">Name</property>
                     <child>
-                      <object class="GtkCellRendererText" id="NameCell"/>
+                      <object class="GtkCellRendererText" id="NameCell">
+                        <property name="editable">True</property>
+		      </object>
                     </child>
                   </object>
                 </child>
