--- a/share/ui/models.ui
+++ b/share/ui/models.ui
@@ -4,8 +4,8 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkListStore" id="ModelList">
     <columns>
-      <!-- column-name id -->
-      <column type="gulong"/>
+      <!-- column-name uuid -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkWindow" id="window1">
