--- a/share/ui/toolpath_crop.ui
+++ b/share/ui/toolpath_crop.ui
@@ -37,6 +37,29 @@
               </packing>
             </child>
             <child>
+              <object class="GtkViewport" id="ToolpathCropInfoBox">
+                <property name="visible">True</property>
+                <property name="resize_mode">queue</property>
+                <property name="shadow_type">etched-out</property>
+                <child>
+                  <object class="GtkLabel" id="ToolpathCropInfo">
+                    <property name="visible">True</property>
+                    <property name="xalign">0</property>
+                    <property name="ypad">1</property>
+                    <property name="label" translatable="yes">label</property>
+                    <attributes>
+                      <attribute name="weight" value="semibold"/>
+                      <attribute name="foreground" value="#ffff00000000"/>
+                    </attributes>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkTable" id="table1">
                 <property name="visible">True</property>
                 <property name="n_rows">2</property>
@@ -97,24 +120,6 @@
                     <property name="right_attach">2</property>
                     <property name="y_options">GTK_FILL</property>
                   </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkViewport" id="ToolpathCropInfoBox">
-                <property name="visible">True</property>
-                <property name="resize_mode">queue</property>
-                <property name="shadow_type">etched-out</property>
-                <child>
-                  <object class="GtkLabel" id="ToolpathCropInfo">
-                    <property name="visible">True</property>
-                    <property name="xalign">0</property>
-                    <property name="label" translatable="yes">label</property>
-                  </object>
                 </child>
               </object>
               <packing>
