turn toolpath objects into children of ObjectWithAttributes
* unify the handling of models, tools, processes, tasks and (finally) toolpaths
* this required a change of the interfaces of
  pycam.Plugins.ObjectWithAttributes and pycam.Toolpath.Toolpath
  (use only named parameters - otherwise multiple inheritence fails)
* turn Toolpath.path into a property - now we can detect changes and clear the
  cache
* remove the Toolpath methods copy/crop/get_cropped_copy - now you can
  use the filter instead:
    toolpath | pycam.Toolpath.Filters.Crop(polygons)
* simplified the toolpath plugin - now the implementation is similar to
  models/tools/processes/tasks (no more information storage in gtk models)

--- a/share/ui/toolpaths.ui
+++ b/share/ui/toolpaths.ui
@@ -5,24 +5,8 @@
   <object class="GtkListStore" id="ToolpathListModel">
     <columns>
       <!-- column-name ref -->
-      <column type="gulong"/>
-      <!-- column-name name -->
       <column type="gchararray"/>
-      <!-- column-name visible -->
-      <column type="gboolean"/>
     </columns>
-    <data>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">#1</col>
-        <col id="2">True</col>
-      </row>
-      <row>
-        <col id="0">0</col>
-        <col id="1" translatable="yes">#2</col>
-        <col id="2">False</col>
-      </row>
-    </data>
   </object>
   <object class="GtkVPaned" id="ToolpathsBox">
     <property name="visible">True</property>
@@ -60,10 +44,9 @@
                   <object class="GtkTreeViewColumn" id="ToolpathNameColumn">
                     <property name="title">Name</property>
                     <child>
-                      <object class="GtkCellRendererText" id="ToolpathNameCell"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
+                      <object class="GtkCellRendererText" id="ToolpathNameCell">
+                        <property name="editable">True</property>
+                      </object>
                     </child>
                   </object>
                 </child>
