use ParameterGroup for different toolpath processor settings
* ToolpathProcessors now handles different kinds of tasks (Milling, Cutting, ...)
* all settings in GCodeParameters are moved to the proper ParameterGroup
* for now we ignore the PostProcessors (different GCode dialects)
* show/hide does not work currently for "spindle_enable"
* settings are currently not applied - just the UI works
* still no GCode export

--- a/share/ui/toolpath_processors.ui
+++ b/share/ui/toolpath_processors.ui
@@ -54,6 +54,8 @@
   </object>
   <object class="GtkHButtonBox" id="PreferencesControls">
     <property name="visible">True</property>
+    <property name="spacing">3</property>
+    <property name="layout_style">center</property>
     <child>
       <object class="GtkButton" id="PreferencesButton">
         <property name="label">gtk-preferences</property>
