--- a/share/ui/processes.ui
+++ b/share/ui/processes.ui
@@ -51,12 +51,13 @@
                     <child>
                       <object class="GtkCellRendererText" id="NameCell">
                         <property name="editable">True</property>
-		      </object>
+                      </object>
                     </child>
                   </object>
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="DescriptionColumn">
+                    <property name="visible">False</property>
                     <property name="title">Description</property>
                     <property name="expand">True</property>
                     <child>
