--- a/share/ui/bounds.ui
+++ b/share/ui/bounds.ui
@@ -201,7 +201,7 @@
                     <property name="receives_default">True</property>
                     <property name="relief">none</property>
                     <property name="use_stock">True</property>
-                    <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=BoundsSettings</property>
+                    <property name="uri">http://pycam.sourceforge.net/bounding-box</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
