--- a/share/ui/models.ui
+++ b/share/ui/models.ui
@@ -148,7 +148,7 @@
                     <property name="receives_default">True</property>
                     <property name="relief">none</property>
                     <property name="use_stock">True</property>
-                    <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=ModelTransformations</property>
+                    <property name="uri">http://pycam.sourceforge.net/model-transformations</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
