--- a/share/ui/processes.ui
+++ b/share/ui/processes.ui
@@ -150,7 +150,7 @@
                 <property name="receives_default">True</property>
                 <property name="relief">none</property>
                 <property name="use_stock">True</property>
-                <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=ProcessSettings</property>
+                <property name="uri">http://pycam.sourceforge.net/process-settings</property>
               </object>
               <packing>
                 <property name="expand">False</property>
