--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -181,7 +181,7 @@
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text" translatable="yes">Inkscape is a vector drawing program. It can be used to convert 2D SVG files into DXF contour models.</property>
                             <property name="xalign">0</property>
-                            <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=Requirements#Inkscape</property>
+                            <property name="uri">http://inkscape.org</property>
                           </object>
                           <packing>
                             <property name="x_options">GTK_FILL</property>
@@ -197,7 +197,7 @@
                             <property name="tooltip_text" translatable="yes">pstoedit is a postscript conversion tool. It can be used to convert 2D SVG files into DXF contour models.</property>
                             <property name="relief">none</property>
                             <property name="xalign">0</property>
-                            <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=Requirements#Inkscape</property>
+                            <property name="uri">http://www.pstoedit.net/pstoedit</property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -302,7 +302,7 @@
                             <property name="relief">none</property>
                             <property name="use_stock">True</property>
                             <property name="xalign">1</property>
-                            <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=Requirements#Optional_external_programs</property>
+                            <property name="uri">http://pycam.sourceforge.net/requirements/#optional-external-programs</property>
                           </object>
                           <packing>
                             <property name="right_attach">4</property>
