--- a/share/ui/tasks.ui
+++ b/share/ui/tasks.ui
@@ -180,7 +180,7 @@
                 <property name="receives_default">True</property>
                 <property name="relief">none</property>
                 <property name="use_stock">True</property>
-                <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=TaskSettings</property>
+                <property name="uri">http://pycam.sourceforge.net/task-settings</property>
               </object>
               <packing>
                 <property name="expand">False</property>
