--- a/share/ui/tools.ui
+++ b/share/ui/tools.ui
@@ -170,7 +170,7 @@
                 <property name="receives_default">True</property>
                 <property name="relief">none</property>
                 <property name="use_stock">True</property>
-                <property name="uri">http://sourceforge.net/apps/mediawiki/pycam/index.php?title=ToolTypes</property>
+                <property name="uri">http://pycam.sourceforge.net/tool-types</property>
               </object>
               <packing>
                 <property name="expand">False</property>
